--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
 	background-position:0 4px;
 }
 .motion {
-	background:url("images/reel_blur.png") repeat-y; /*Taken from http://www.swish-designs.co.uk*/
+	background:url("images/blur.jpg") repeat-y; /*Taken from http://www.swish-designs.co.uk*/
 }
 button {
 	display:block;
