--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
 	 border: 1px solid #000000;
 }
 .slot {
-	background:url("images/reel_normal.png") repeat-y; /*Taken from http://www.swish-designs.co.uk*/
+	background:url("images/normal.jpg") repeat-y;
 	width:86px;
 	height:70px;
 	float:left;
@@ -29,7 +29,7 @@ body {
 	background-position:0 4px;
 }
 .motion {
-	background:url("images/blur.jpg") repeat-y; /*Taken from http://www.swish-designs.co.uk*/
+	background:url("images/blur.jpg") repeat-y;
 }
 button {
 	display:block;
