--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 	 border: 1px solid #000000;
 }
 .slot {
-	background:url("images/normal.png") repeat-y;
+	background:url("images/normal.png") repeat-x;
 	width:86px;
 	height:70px;
 	float:left;
@@ -27,7 +27,7 @@ body {
 	background-position:0 4px;
 }
 .motion {
-	background:url("images/normal.png") repeat-y;
+	background:url("images/normal.png") repeat-x;
 }
 button {
 	display:block;
