--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
 	background-position:0 4px;
 }
 .motion {
-	background:url("images/blur.jpg") repeat-x;
+	background:url("images/normal.jpg") repeat-x;
 }
 button {
 	display:block;
